--- a/RegistroOrden/Pages/Index.razor
+++ b/RegistroOrden/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Saludos Cibernautas!</h1>
 
-Welcome to your new app.
+Bienvenidos al Registro Orden 😄
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
