--- a/RegistroOrden/Pages/Registros/R_Ordenes.razor
+++ b/RegistroOrden/Pages/Registros/R_Ordenes.razor
@@ -83,11 +83,11 @@
                     <table class="table table-striped">
                         <thead class="thead-light">
                             <tr>
-                                <th>Id</th>
-                                <th>Orden Id</th>
                                 <th>Producto Id</th>
+                                <th>Descripción</th>
                                 <th>Cantidad</th>
                                 <th>Costo</th>
+                                <th>Importe</th>
                             </tr>
                         </thead>
                         @*Asignacion de los datos del Detalle*@
@@ -95,11 +95,11 @@
                             @foreach (var item in Orden.OrdenesDetalle)
                             {
                                 <tr>
-                                    <td>@item.Id</td>
-                                    <td>@item.OrdenId</td>
                                     <td>@item.ProductoId</td>
+                                    <td>@ObtenerDescripcion(item.ProductoId)</td>
                                     <td>@item.Cantidad</td>
                                     <td>@item.Costo</td>
+                                    <td>@(item.Costo * item.Cantidad)</td>
                                     <td><button type="button" class="btn btn-outline-danger" @onclick="(() => EliminarDetalle(item))"> Remover</button></td>
                                 </tr>
                             }
@@ -128,102 +128,113 @@
 
 @code {
 
-        [Parameter]
-        public int OrdenId { get; set; }
+    [Parameter]
+    public int OrdenId { get; set; }
 
-        public int Cantidad { get; set; }
-        public int ProductoSeleccionado { get; set; }
-        public decimal CostoProducto { get; set; }
+    public int Cantidad { get; set; }
+    public int ProductoSeleccionado { get; set; }
+    public decimal CostoProducto { get; set; }
 
-        Ordenes Orden = new Ordenes();
-        List<Suplidores> ListaSuplidores = new List<Suplidores>();
-        List<Productos> ListaProductos = new List<Productos>();
+    Ordenes Orden = new Ordenes();
+    List<Suplidores> ListaSuplidores = new List<Suplidores>();
+    List<Productos> ListaProductos = new List<Productos>();
 
-        protected override void OnInitialized()
+    protected override void OnInitialized()
+    {
+        Nuevo();
+        if (OrdenId > 0)
         {
-            Nuevo();
-            if (OrdenId > 0)
-            {
-                var auxOrden = OrdenesBLL.Buscar(OrdenId);
-                if (auxOrden != null)
-                    this.Orden = auxOrden;
-                else
-                    toast.ShowWarning("No encontrado.");
-            }
-
-            ListaSuplidores = SuplidoresBLL.GetList(p => true);
-            ListaProductos = ProductosBLL.GetList(p => true);
-        }
-
-        private void Buscar()
-        {
-            var encontrado = OrdenesBLL.Buscar(Orden.OrdenId);
-            if (encontrado != null)
-            {
-                this.Orden = encontrado;
-            }
+            var auxOrden = OrdenesBLL.Buscar(OrdenId);
+            if (auxOrden != null)
+                this.Orden = auxOrden;
             else
-                toast.ShowWarning("No encontrado");
-
+                toast.ShowWarning("No encontrado.");
         }
 
-        private void Nuevo()
+        ListaSuplidores = SuplidoresBLL.GetList(p => true);
+        ListaProductos = ProductosBLL.GetList(p => true);
+    }
+
+    private string ObtenerDescripcion(int id)
+    {
+        string Descripcion = null;
+        Productos p = ProductosBLL.Buscar(id);
+
+        Descripcion = p.Descripcion;
+        return Descripcion;
+    }
+
+
+    private void Buscar()
+    {
+        var encontrado = OrdenesBLL.Buscar(Orden.OrdenId);
+        if (encontrado != null)
         {
-            this.Orden = new Ordenes();
-            Cantidad = 0;
+            this.Orden = encontrado;
+        }
+        else
+            toast.ShowWarning("No encontrado");
+
+    }
+
+    private void Nuevo()
+    {
+        this.Orden = new Ordenes();
+        Cantidad = 0;
+        ProductoSeleccionado = 0;
+        CostoProducto = 0;
+
+    }
+
+    private void EncontrarCosto()
+    {
+        var auxProducto = ProductosBLL.Buscar(ProductoSeleccionado);
+        if (auxProducto != null)
+        {
+            CostoProducto = auxProducto.Costo;
+        }
+
+    }
+
+
+    private void Agregar()
+    {
+        if (ProductoSeleccionado == 0)
+        {
+            toast.ShowWarning("Tiene que seleccionar un producto.");
+            return;
+        }
+
+        if (Cantidad <= 0)
+        {
+            toast.ShowWarning("La cantidad debe ser mayor a 0.");
+            return;
+        }
+        else
+        {
+            this.Orden.OrdenesDetalle.Add(new OrdenesDetalle
+            {
+                OrdenId = Orden.OrdenId,
+                ProductoId = ProductoSeleccionado,
+                Cantidad = Cantidad,
+                Costo = CostoProducto
+            });
+
             ProductoSeleccionado = 0;
             CostoProducto = 0;
+            Cantidad = 0;
 
         }
+        CalcularMonto();
 
-        private void EncontrarCosto()
+    }
+
+    private void CalcularMonto()
+    {
+        decimal total = 0;
+        foreach (var item in Orden.OrdenesDetalle)
         {
-            var auxProducto = ProductosBLL.Buscar(ProductoSeleccionado);
-            if (auxProducto != null)
-            {
-                CostoProducto = auxProducto.Costo;
-            }
-
-        }
-
-        private void Agregar()
-        {
-            if (ProductoSeleccionado == 0)
-            {
-                toast.ShowWarning("Tiene que seleccionar un producto.");
-                return;
-            }
-
-            if (Cantidad <= 0)
-            {
-                toast.ShowWarning("La cantidad debe ser mayor a 0.");
-                return;
-            }
-            else
-            {
-                this.Orden.OrdenesDetalle.Add(new OrdenesDetalle
-                {
-                    OrdenId = Orden.OrdenId,
-                    ProductoId = ProductoSeleccionado,
-                    Cantidad = Cantidad,
-                    Costo = CostoProducto
-                });
-
-                ProductoSeleccionado = 0;
-                CostoProducto = 0;
-                Cantidad = 0;
-
-            }
-            CalcularMonto();
-
-        }
-
-        private void CalcularMonto()
-        {
-            decimal total = 0;
-            foreach (var item in Orden.OrdenesDetalle)
-                {
-                total += (item.Costo * item.Cantidad);
+            total += (item.Costo * item.Cantidad);
         }
         Orden.Monto = total;
     }
